# simple-file-server

./: Cargo.toml  Dockerfile  README.md  amvera.yml
src/: main.rs
