[package]
name = "rust-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files="0.6"
serde = "*"
serde_json = "*"
actix-multipart="*"
futures-util="*"
uuid = { version = "1", features = ["v4"] }
sanitize-filename = "0.4"